refactoring the chenges

--- a/dropins/authenticate-selector/pom.xml
+++ b/dropins/authenticate-selector/pom.xml
@@ -27,43 +27,51 @@
             <groupId>net.sf.saxon</groupId>
             <artifactId>Saxon-HE</artifactId>
             <version>${saxon.he.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.application.common</artifactId>
             <version>${org.wso2.carbon.identity.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
             <version>${org.apache.felix.scr.annotations.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.utils</artifactId>
             <version>${org.wso2.carbon.utils.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.core</artifactId>
             <version>${org.wso2.carbon.identity.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
+<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
             <type>jar</type>
+	<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wso2telco.core</groupId>
             <artifactId>mnc-resolver</artifactId>
             <version>${mnc.resolver.version}</version>
             <type>jar</type>
+<scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
