--- a/dropins/openid-token-builder/pom.xml
+++ b/dropins/openid-token-builder/pom.xml
@@ -22,74 +22,92 @@
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<json.path.version>0.9.1</json.path.version>
-		<com.gsma.authenticators.version>1.0.0</com.gsma.authenticators.version>
 		<nimbus.jose.jwt.version>2.26.1</nimbus.jose.jwt.version>
 		<json.smart.version>1.0.9</json.smart.version>
 		<org.wso2.carbon.apimgt.impl.version>1.2.2</org.wso2.carbon.apimgt.impl.version>
 	</properties>
 
 	<dependencies>
+		 <dependency>
+                        <groupId>org.wso2.carbon.identity</groupId>
+                        <artifactId>org.wso2.carbon.identity.oauth</artifactId>
+                        <version>${org.wso2.carbon.identity.version}</version>
+                </dependency>
+
+
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
 			<version>${org.wso2.amber.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.logging</artifactId>
 			<version>${org.wso2.carbon.logging.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>${commons-httpclient.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sling</groupId>
 			<artifactId>org.apache.sling.commons.json</artifactId>
 			<version>${org.apache.sling.commons.json.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<version>${json.path.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.core</artifactId>
 			<version>${org.wso2.carbon.identity.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.gsma.authenticators</groupId>
-			<artifactId>com.gsma.authenticators</artifactId>
+			<groupId>com.wso2telco.ids</groupId>
+			<artifactId>gsma-authenticator</artifactId>
 			<version>${com.gsma.authenticators.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.provider</artifactId>
 			<version>${org.wso2.carbon.identity.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>com.nimbusds</groupId>
 		    <artifactId>nimbus-jose-jwt</artifactId>
 		    <version>${nimbus.jose.jwt.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 		    <groupId>net.minidev</groupId>
 		    <artifactId>json-smart</artifactId>
 		    <version>${json.smart.version}</version>
+<scope>provided</scope>
 		</dependency>
 		<dependency>
 		  <groupId>org.wso2.carbon</groupId>
 		  <artifactId>org.wso2.carbon.apimgt.impl</artifactId>
 		  <version>${org.wso2.carbon.apimgt.impl.version}</version>
+<scope>provided</scope>
 		  <type>jar</type>
 		 </dependency>
 		<dependency>
 		    <groupId>org.wso2.carbon.identity</groupId>
 		    <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
 		    <version>${org.wso2.carbon.identity.version}</version>
+<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
