--- a/dropins/gsma-authenticators-other-operators/pom.xml
+++ b/dropins/gsma-authenticators-other-operators/pom.xml
@@ -90,9 +90,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
             <version>2.1</version>
         </dependency>
         <dependency>
-            <groupId>Authendicatorselector</groupId>
-            <artifactId>Authendicatorselector</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>authenticate-selector</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 	 <dependency>
 	  <groupId>org.apache.httpcomponents</groupId>
