--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
 	</prerequisites>
 
 	<modules>
-		<!--module>lib</module>
-		<module>dropins</module-->
+		<module>lib</module>
+		<module>dropins</module>
 		<module>webapps</module>
 	</modules>
 
