--- a/webapps/session-updater/src/main/resources/application.properties
+++ b/webapps/session-updater/src/main/resources/application.properties
@@ -1,39 +1,18 @@
-#-------------------------------------------------------------------------------
-# Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-# 
-# WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# 
-#   http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#-------------------------------------------------------------------------------
-subscription.resourceurl=https://apistore.dialog.lk/apicall/smsmessaging/1.0/inbound/subscriptions
-sendSMSResourceURL="https://54.214.238.248:8243/smsmessaging/v1/outbound/"
-startSubscriptionResourceURL="http://localhost:8080/sms/outbound/subscriptions/"
-smpp_port_1="2645"
-smpp_port_list="2645;7781;7756;8867"
-ussdsend=http://10.62.96.185:8080/ussd/v1/outbound
-notifyurl=http://10.62.96.187:9764/MediationTest/tnspoints/endpoint/ussd/pin
-accesstoken=8_r_ItdMOtN5BvdPD45qGUmYdhAa
+ssubscription.resourceurl=https://apistore.dialog.lk/apicall/smsmessaging/1.0/inbound/subscriptions
+sendSMSResourceURL=https://54.214.238.248:8243/smsmessaging/v1/outbound/
+startSubscriptionResourceURL=http://localhost:8080/sms/outbound/subscriptions/
+smpp_port_1=2645
+smpp_port_list=2645;7781;7756;8867
+ussdsend=http://ideabiz.lk/apicall/ussd/v1/outbound
+notifyurl=https://india.mconnect.wso2telco.com/SessionUpdater/tnspoints/endpoint/ussd/pin
+#notifyurl=http://172.26.92.6:9763/HTTPRequestRouter/route?org=http%3A%2F%2F128.199.174.220%2Fideamart%2Froute%2F%3Fx_url%3Dhttps%253A%252F%252Findia.mconnect.wso2telco.com%253A9763%252FSessionUpdater%252Fwebresources%252Fendpoint%252Fussd%252Fpin
+accesstoken=4442137174b27a9837e745c711f4e31
 shortcode=tel:1721
 message=Enter your Mobile ID PIN
 retry_message=Incorrect Pin. Enter PIN again
 error_message=You have entered invalid pin 3 times.Your session is over
-ussd_retry_meesage=Invalid response. Mobile connect:Login with Mobile Connect?\n1. OK\n2. Cancel
-ussd_error_message=You have entered invalid response 3 times.Your session is over
-keyword=123
-admin_url=https://localhost:9444
-<<<<<<< HEAD
+keyword=3456
+admin_url=https://india.mconnect.wso2telco.com/
 aeskey=wso2encryptdecyt
-=======
 adminusername=admin
-adminpassword=admin
-
->>>>>>> b5e0a3321982fed1ce3c5cb087727c5c0f769fc3
-
+adminpassword=Y4ap9v4#
