--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,12 @@
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
 		<junit.version>3.8.1</junit.version>
 		<commons.lang.version>2.3</commons.lang.version>
-		<mnc.resolver.version>1.0.4</mnc.resolver.version>
+		<mnc.resolver.version>1.0.5-SNAPSHOT</mnc.resolver.version>
 		<httpclient.version>4.3.4</httpclient.version>
 		<gson.version>2.1</gson.version>
 		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
 		<com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
 		<com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
-		<url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version>
 	</properties>
 
 	<dependencies>
