--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -1,18 +1,19 @@
-<!--
-  Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-  
-  WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+-<!--
+-  Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
+-  
+-  WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
+-  you may not use this file except in compliance with the License.
+-  You may obtain a copy of the License at
+-  
+-    http://www.apache.org/licenses/LICENSE-2.0
+-  
+-  Unless required by applicable law or agreed to in writing, software
+-  distributed under the License is distributed on an "AS IS" BASIS,
+-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+-  See the License for the specific language governing permissions and
+-  limitations under the License.
+--->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -33,5 +34,15 @@
 		<module>url-shorten</module>
 		<module>user-claim-retriever</module>
 	</modules>
+
+	<properties>
+		<json.version>20131018</json.version>
+		<cxf-bundle.versrion>2.6.1.wso2v2</cxf-bundle.versrion>
+		<org.wso2.carbon.utils.version>4.2.0</org.wso2.carbon.utils.version>
+		<amber.version>0.22.1358727.wso2v4</amber.version>
+		<org.wso2.carbon.identity.oauth.version>4.2.7</org.wso2.carbon.identity.oauth.version>
+		<org.wso2.carbon.ui.version>4.2.0</org.wso2.carbon.ui.version>
+		<org.wso2.carbon.identity.application.authentication.framework.version>4.4.0</org.wso2.carbon.identity.application.authentication.framework.version>
+	</properties>
 
 </project>
