--- a/lib/user-claim-retriever/pom.xml
+++ b/lib/user-claim-retriever/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
   Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
   
@@ -34,33 +33,33 @@
 		<dependency>
 			<groupId>org.apache.cxf.wso2</groupId>
 			<artifactId>cxf-bundle</artifactId>
-			<version>2.6.1.wso2v2</version>
+			<version>${cxf-bundle.versrion}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.utils</artifactId>
-			<version>4.2.0</version>
+			<version>${org.wso2.carbon.utils.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
 			<!-- <version>4.2.3</version> -->
-			<version>4.2.7</version>
+			<version>${org.wso2.carbon.identity.oauth.version}</version>
 		</dependency>
 		<!-- <dependency> <groupId>org.wso2.carbon.identity</groupId> <artifactId>org.wso2.carbon.identity.oauth</artifactId> 
 			<version>4.4.0</version> </dependency> -->
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
-			<version>0.22.1358727.wso2v4</version>
+			<version>${amber.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon</groupId>
 			<artifactId>org.wso2.carbon.ui</artifactId>
-			<version>4.2.0</version>
+			<version>${org.wso2.carbon.ui.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- <dependency> <groupId>org.wso2.carbon</groupId> <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId> 
@@ -68,17 +67,17 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
-			<version>4.4.0</version>
+			<version>${org.wso2.carbon.identity.application.authentication.framework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<version>${junit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20131018</version>
+			<version>${json.version}</version>
 		</dependency>
 	</dependencies>
 
