--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 	<properties>
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>4.4.0</org.wso2.carbon.identity.version>
+		<org.wso2.carbon.identity.oauth.version>5.0.7</org.wso2.carbon.identity.oauth.version>
+		<org.wso2.carbon.utils.version>4.4.3</org.wso2.carbon.utils.version>
 		<maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
 		<commons.logging>1.2</commons.logging>
 		<maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
