correcting parent pom module

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -17,9 +17,9 @@
 	</prerequisites>
 
 	<modules>
-		<module>lib</module>
+		<!--module>lib</module-->
 		<module>dropins</module>
-		<module>webapps</module>
+		<!--module>webapps</module-->
 	</modules>
 
 	<properties>
