--- a/components/lib/url-shorten/pom.xml
+++ b/components/lib/url-shorten/pom.xml
@@ -40,6 +40,7 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${httpclient.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
@@ -50,6 +51,7 @@
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
 			<version>${json.simple.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
