--- a/components/dropins/openid-token-builder/pom.xml
+++ b/components/dropins/openid-token-builder/pom.xml
@@ -1,18 +1,11 @@
-<!--
-  Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-  
-  WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+<!-- Copyright (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) 
+	All Rights Reserved. WSO2.Telco Inc. licences this file to you under the 
+	Apache License, Version 2.0 (the "License"); you may not use this file except 
+	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -33,7 +26,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
-		<org.wso2.carbon.logging.version>4.4.0</org.wso2.carbon.logging.version>
+		<org.wso2.carbon.logging.version>4.4.3</org.wso2.carbon.logging.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<json.path.version>0.9.1</json.path.version>
@@ -43,13 +36,11 @@
 	</properties>
 
 	<dependencies>
-		 <dependency>
-                        <groupId>org.wso2.carbon.identity</groupId>
-                        <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-                        <version>${org.wso2.carbon.identity.oauth.version}</version>
-                </dependency>
-
-
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+			<version>${org.wso2.carbon.identity.oauth.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.amber.wso2</groupId>
 			<artifactId>amber</artifactId>
@@ -83,46 +74,45 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.core</artifactId>
-			<version>${org.wso2.carbon.identity.version}</version>
+			<version>${org.wso2.carbon.identity.core.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>gsma-authenticator</artifactId>
-			<version>${com.gsma.authenticators.version}</version>
-			<scope>provided</scope>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.provider</artifactId>
+			<version>${org.wso2.carbon.identity.provider.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>${nimbus.jose.jwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.minidev</groupId>
+			<artifactId>json-smart</artifactId>
+			<version>${json.smart.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.apimgt.impl</artifactId>
+			<version>${org.wso2.carbon.apimgt.impl.version}</version>
+			<scope>provided</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
 			<version>${org.wso2.carbon.identity.version}</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-		    <groupId>com.nimbusds</groupId>
-		    <artifactId>nimbus-jose-jwt</artifactId>
-		    <version>${nimbus.jose.jwt.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-		    <groupId>net.minidev</groupId>
-		    <artifactId>json-smart</artifactId>
-		    <version>${json.smart.version}</version>
-<scope>provided</scope>
-		</dependency>
-		<dependency>
-		  <groupId>org.wso2.carbon</groupId>
-		  <artifactId>org.wso2.carbon.apimgt.impl</artifactId>
-		  <version>${org.wso2.carbon.apimgt.impl.version}</version>
-<scope>provided</scope>
-		  <type>jar</type>
-		 </dependency>
-		<dependency>
-		    <groupId>org.wso2.carbon.identity</groupId>
-		    <artifactId>org.wso2.carbon.identity.application.mgt.stub</artifactId>
-		    <version>${org.wso2.carbon.identity.version}</version>
-<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -135,35 +125,35 @@
 				</includes>
 			</resource>
 		</resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-		<version>${maven.bundle.plugin.version}</version>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>${project.artifactId}</Bundle-Name>
-                        <Import-Package>
-                            org.apache.commons.logging.*; version="1.0.4",
-                            org.wso2.carbon.identity.base.*,
-                            org.wso2.carbon.identity.core.*,
-                            org.wso2.carbon.identity.oauth.*,
-                            org.wso2.carbon.identity.openidconnect.*,
-                            *;resolution:=optional
-                        </Import-Package>
-                        <Export-Package>
-                            com.axiata.dialog.*
-                        </Export-Package>
-                        <Embed-Dependency>
-                            nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
-                        </Embed-Dependency>
-                        <DynamicImport-Package>*</DynamicImport-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+				<version>${maven.bundle.plugin.version}</version>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Import-Package>
+							org.apache.commons.logging.*; version="1.0.4",
+							org.wso2.carbon.identity.base.*,
+							org.wso2.carbon.identity.core.*,
+							org.wso2.carbon.identity.oauth.*,
+							org.wso2.carbon.identity.openidconnect.*,
+							*;resolution:=optional
+						</Import-Package>
+						<Export-Package>
+							com.axiata.dialog.*
+						</Export-Package>
+						<Embed-Dependency>
+							nimbus-jose-jwt|json-smart;scope=compile|runtime;inline=false
+						</Embed-Dependency>
+						<DynamicImport-Package>*</DynamicImport-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
