--- a/components/dropins/gsma-authenticators/pom.xml
+++ b/components/dropins/gsma-authenticators/pom.xml
@@ -38,6 +38,7 @@
                         <groupId>org.wso2.carbon.identity</groupId>
                         <artifactId>org.wso2.carbon.identity.oauth</artifactId>
                         <version>${org.wso2.carbon.identity.oauth.version}</version>
+                        
                 </dependency>
 
 
@@ -109,9 +110,9 @@
 							javax.servlet.http;version="[2.6.0, 3.0.0)",
 							*;resolution:=optional
 						</Import-Package>
-						<Export-Package>!com.wso2telco.gsma.authenticators.internal,
+						<!--Export-Package>!com.wso2telco.gsma.authenticators.internal,
 							com.wso2telco.gsma.authenticators.*
-						</Export-Package>
+						</Export-Package-->
 						<DynamicImport-Package>*</DynamicImport-Package>
 					</instructions>
 				</configuration>
