--- a/components/dropins/gsma-authenticators/pom.xml
+++ b/components/dropins/gsma-authenticators/pom.xml
@@ -27,7 +27,12 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+ 			<groupId>org.wso2.carbon.identity</groupId>
+ 			<artifactId>org.wso2.carbon.identity.oauth</artifactId>
+ 			<version>${org.wso2.carbon.identity.oauth.version}</version>
+ 			<scope>provided</scope>
+ 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
