--- a/components/lib/user-claim-retriever/pom.xml
+++ b/components/lib/user-claim-retriever/pom.xml
@@ -1,18 +1,11 @@
-<!--
-  Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-  
-  WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
+<!-- Copyright (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) 
+	All Rights Reserved. WSO2.Telco Inc. licences this file to you under the 
+	Apache License, Version 2.0 (the "License"); you may not use this file except 
+	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
@@ -27,7 +20,7 @@
 
 	<artifactId>user-claim-retriever</artifactId>
 	<name>User Claim Retriever - Lib</name>
-	<!--<packaging>war</packaging> -->
+	<packaging>bundle</packaging>
 
 	<dependencies>
 		<dependency>
@@ -74,31 +67,42 @@
 			<artifactId>json</artifactId>
 			<version>${json.version}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.framework</artifactId>
+            <version>${felix.framework.version}</version>
+        </dependency> 
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
+			<!--plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
 					<webResources>
-						<resource>
-							<!-- this is relative to the pom.xml directory -->
+						<resource>							
 							<directory>src/main/webapp</directory>
 						</resource>
 					</webResources>
 					<warName>user-claim-retriever</warName>
 				</configuration>
-			</plugin>
+			</plugin-->			
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${org.apache.felix.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<manifestLocation>META-INF</manifestLocation>
 					<instructions>
-						<Export-Package>com.wso2telco.user.impl</Export-Package>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Bundle-Name>${project.artifactId}</Bundle-Name>
+						<Bundle-Version>${project.version}</Bundle-Version>							
+						<Export-Package>com.wso2telco.*</Export-Package>
+						<Import-Package>
+                            org.osgi.framework,
+                            *;resolution:=optional
+                        </Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
