--- a/components/pom.xml
+++ b/components/pom.xml
@@ -40,6 +40,8 @@
 		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
 		<com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
 		<com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
+		<org.apache.felix.version>2.3.7</org.apache.felix.version>
+		<felix.framework.version>1.0.3</felix.framework.version>
 	</properties>
 
 	<dependencies>
