--- a/components/pom.xml
+++ b/components/pom.xml
@@ -43,6 +43,7 @@
 		<url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version> 
 		<maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>
 		<org.apache.felix.version>1.0.3</org.apache.felix.version>
+		<felix.framework.version>1.0.3</felix.framework.version>
 		
 	</properties>
 
