--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
 	</modules>
 
 	<properties>
-		<org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
 		<org.wso2.carbon.identity.core.version>5.0.7</org.wso2.carbon.identity.core.version>
@@ -41,11 +40,7 @@
 		<com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
 		<com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
 		<com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
-		<url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version> 
-		<maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>
-		<org.apache.felix.version>1.0.3</org.apache.felix.version>
-		<felix.framework.version>1.0.3</felix.framework.version>
-		
+		<carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
 	</properties>
 
 	<dependencies>
