--- a/features/com.wso2telco.ids.urlshorten.feature/pom.xml
+++ b/features/com.wso2telco.ids.urlshorten.feature/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
        <groupId>com.wso2telco.ids</groupId>
-	<artifactId>component-ids</artifactId>
+	<artifactId>component-ids-feature</artifactId>
         <version>1.0.0-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
     </parent>
