--- a/features/pom.xml
+++ b/features/pom.xml
@@ -2,49 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-	 <groupId>com.wso2telco.ids</groupId>
-        <artifactId>component-ids-feature</artifactId>
-        <packaging>pom</packaging>
+    <parent>
+       <groupId>com.wso2telco.ids</groupId>
+	<artifactId>component-ids-feature</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-    	<modelVersion>4.0.0</modelVersion>
+	<relativePath>../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>component-ids-feature</artifactId>
     <packaging>pom</packaging>
-    <name>WSO2Telco  - Identit  Manager Server Feature</name>
+    <name>WSO2Telco  -Identity Server Features</name>
     <url>http://wso2.org</url>
-    <description>This feature contains the server bundles required for Back-end IDS Management functionality</description>
+
+    <modules>
+        <module>com.wso2telco.ids.urlshorten.feature</module>
+    </modules>
 
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.wso2.maven</groupId>
-                <artifactId>carbon-p2-plugin</artifactId>
-                <version>${carbon.p2.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>p2-feature-generation</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>p2-feature-gen</goal>
-                        </goals>
-                        <configuration>
-                            <id>com.wso2Telco.ids.server</id>
-                            <propertiesFile>feature.properties</propertiesFile>
-                            <adviceFile>
-                                <properties>
-                                    <propertyDef>org.wso2.carbon.p2.category.type:server</propertyDef>
-                                    <propertyDef>org.eclipse.equinox.p2.type.group:false</propertyDef>
-                                </properties>
-                            </adviceFile>
-                            <bundles>
-                                <bundleDef>org.wso2.carbon:org.wso2.carbon.student.mgt</bundleDef>
-                            </bundles>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+
 
 </project>
