new pom copy from wso2 identity 5.0.5

--- a/features/com.wso2telco.ids.urlshorten.feature/pom.xml
+++ b/features/com.wso2telco.ids.urlshorten.feature/pom.xml
@@ -47,6 +47,7 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
+				<bundleDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</bundleDef>
                                 <bundleDef>com.wso2telco.ids:url-shorten:${org.wso2telco.ids.version}</bundleDef>
                             </bundles>
                         </configuration>
