--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
         <dependencies>
             <!--Components Dependencies Starts-->
 
+	  <dependency>
+                <groupId>com.googlecode.json-simple</groupId>
+                <artifactId>json-simple</artifactId>
+                <version>${json.simple.version}</version>
+            </dependency>
+
             <!-- Carbon Kernel Dependencies-->
             <dependency>
                 <groupId>org.eclipse.osgi</groupId>
@@ -2072,7 +2078,7 @@
         <encoder.wso2.version>1.2.0.wso2v1</encoder.wso2.version>
         <javax.xml.parsers.import.pkg.version>[0.0.0, 1.0.0)</javax.xml.parsers.import.pkg.version>
         <ehcache.version>1.5.0.wso2v3</ehcache.version>
-
+	<json.simple.version>1.1</json.simple.version>
         <project.scm.id>my-scm-server</project.scm.id>
     </properties>
 
