add fure to parent feature

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -17,9 +17,7 @@
 
     <modules>
         <module>com.wso2telco.ids.urlshorten.feature</module>
+	<module>com.wso2telco.ids.userclaimretriever.feature</module>
     </modules>
-
-
-
 
 </project>
