carbon.identity.version

--- a/pom.xml
+++ b/pom.xml
@@ -1878,7 +1878,7 @@
         <carbon.commons.imp.pkg.version>[4.4.0, 5.0.0)</carbon.commons.imp.pkg.version>
 
         <!--Carbon identity version-->
-        <carbon.identity.version>5.0.8-SNAPSHOT</carbon.identity.version>
+        <carbon.identity.version>5.0.5</carbon.identity.version>
         <carbon.identity.package.export.version>${carbon.identity.version}</carbon.identity.package.export.version>
         <carbon.identity.package.import.version.range>[5.0.0, 6.0.0)</carbon.identity.package.import.version.range>
 
