feature file creation

--- a/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
+++ b/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
@@ -49,6 +49,9 @@
                             <bundles>
                                 <bundleDef>com.wso2telco.ids:user-claim-retriever:${org.wso2telco.ids.version}</bundleDef>
 				<bundleDef>org.wso2.carbon:org.wso2.carbon.logging:${carbon.kernel.version}</bundleDef>
+				<bundleDef>org.apache.amber.wso2:amber:${org.wso2.amber.version}</bundleDef>
+				<bundleDef>org.apache.sling:org.apache.sling.commons.json:${org.apache.sling.commons.json.version}</bundleDef>
+				<bundleDef>com.jayway.jsonpath:json-path:${json.path.version}</bundleDef>
                             </bundles>
                         </configuration>
                     </execution>
