pom changes added

--- a/features/com.wso2telco.ids.gsmaauthenticator.feature/pom.xml
+++ b/features/com.wso2telco.ids.gsmaauthenticator.feature/pom.xml
@@ -43,6 +43,7 @@
                             </adviceFile>
                             <bundles>				
                                 <bundleDef>com.wso2telco.ids:url-shorten:${org.wso2telco.ids.version}</bundleDef>
+				<bundleDef>commons-codec.wso2:commons-codec:${commons-codec.version}</bundleDef>
                             </bundles>
                         </configuration>
                     </execution>
