--- a/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
+++ b/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wso2telco.ids.urlshorten.feature</artifactId>
+    <artifactId>com.wso2telco.ids.userclaimretriever.feature</artifactId>
     <packaging>pom</packaging>
     <name>WSO2Telco Carbon - Identity Server Feature</name>
     <url>http://wso2.org</url>
