--- a/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
@@ -3,20 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.wso2.carbon.identity</groupId>
+        <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids-feature</artifactId>
-        <version>5.0.8-SNAPSHOT</version>
-	<relativePath>../pom.xml</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wso2telco.ids.urlshorten.feature</artifactId>
+    <artifactId>com.wso2telco.ids.authenticateselector.feature</artifactId>
     <packaging>pom</packaging>
     <name>WSO2Telco Carbon - Identity Server Feature</name>
     <url>http://wso2.org</url>
     <description>This feature contains the server bundles required for Back-end Student Management functionality</description>
 
-    <dependencies>       
+    <dependencies>
+        <!--dependency>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>authenticate-selector</artifactId>
+            <version>${org.wso2telco.ids.version}</version>
+        </dependency-->
     </dependencies>
 
     <build>
@@ -33,7 +38,7 @@
                             <goal>p2-feature-gen</goal>
                         </goals>
                         <configuration>
-                            <id>com.wso2telco.ids.urlshorten.feature</id>
+                            <id>com.wso2telco.ids.authenticate-selector.feature</id>
                             <propertiesFile>../feature.properties</propertiesFile>
                             <adviceFile>
                                 <properties>
@@ -42,11 +47,13 @@
                                 </properties>
                             </adviceFile>
                             <bundles>
-                                <bundleDef>com.wso2telco.ids:url-shorten:${org.wso2telco.ids.version}</bundleDef>
+                                <bundleDef>com.wso2telco.core:mnc-resolver:${org.wso2telco.ids.version}</bundleDef>
+                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.core:${carbon.identity.version}</bundleDef>
+                                <bundleDef>org.wso2.carbon:org.wso2.carbon.utils:${carbon.kernel.version}</bundleDef>
+                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.application.common:${carbon.identity.version}</bundleDef>
+                                <!--bundleDef>org.wso2.orbit.org.apache.httpcomponents:httpclient:${commons-httpclient.wso2.version}</bundleDef-->
+                                <bundleDef>com.wso2telco.ids:authenticate-selector:${org.wso2telco.ids.version}</bundleDef>
                             </bundles>
-				<importFeatures>
-					<importFeatureDef>org.wso2.orbit.org.apache.httpcomponents:httpclient</importFeatureDef>
-				</importFeatures>
                         </configuration>
                     </execution>
                 </executions>
