--- a/features/pom.xml
+++ b/features/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.wso2.carbon.identity</groupId>
-        <artifactId>carbon-identity</artifactId>
-        <version>5.0.8-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <groupId>com.wso2telco.ids</groupId>
+        <artifactId>component-ids</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>component-ids-feature</artifactId>
@@ -15,6 +15,7 @@
         <module>com.wso2telco.ids.urlshorten.feature</module>
         <module>com.wso2telco.ids.gsmaauthenticator.feature</module>
 	<module>com.wso2telco.ids.userclaimretriever.feature</module>
+    <module>com.wso2telco.ids.authenticateselector.feature</module>
     </modules>
     <properties>
 	<org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
