--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <version>1</version>
     </parent>
 
-  <groupId>com.wso2telco.ids</groupId>
+        <groupId>com.wso2telco.ids</groupId>
         <artifactId>component-ids</artifactId>
         <packaging>pom</packaging>
         <version>1.0.0-SNAPSHOT</version>
@@ -2057,6 +2057,27 @@
 	<!--- wso2 telco  -->
 	<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
     <org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
+        <!--from intermediate pom -->
+        <org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
+        <org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
+        <org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
+        <org.wso2.carbon.identity.core.version>5.0.7</org.wso2.carbon.identity.core.version>
+        <org.wso2.carbon.identity.provider.version>5.0.7</org.wso2.carbon.identity.provider.version>
+        <org.wso2.carbon.identity.oauth.version>5.0.7</org.wso2.carbon.identity.oauth.version>
+        <org.wso2.carbon.utils.version>4.4.3</org.wso2.carbon.utils.version>
+        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
+        <commons.logging>1.2</commons.logging>
+        <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
+        <junit.version>4.4</junit.version>
+        <commons.lang.version>2.3</commons.lang.version>
+        <mnc.resolver.version>1.0.5-SNAPSHOT</mnc.resolver.version>
+        <httpclient.version>4.3.1</httpclient.version>
+        <gson.version>2.1</gson.version>
+        <com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
+        <com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
+        <com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
+        <url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version> 
+        <maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>            
     </properties>
 
     <build>
