fixed build issues of url-shorten

--- a/components/lib/url-shorten/pom.xml
+++ b/components/lib/url-shorten/pom.xml
@@ -28,20 +28,23 @@
 	</properties>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${httpclient.version}</version>
-			<scope>provided</scope>
-		</dependency>		
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>${json.simple.version}</version>
-			<scope>provided</scope>
-		</dependency>		
-	</dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>${httpclient.version}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>${json.simple.version}</version>
+		<scope>provided</scope>
+	</dependency>
+</dependencies>
 	<build>
 		<plugins>
 			
