--- a/pom.xml
+++ b/pom.xml
@@ -2074,7 +2074,7 @@
         <httpclient.version>4.3.1</httpclient.version>
         <gson.version>2.1</gson.version>
         <com.wso2telco.ids.urlshorten.version>1.0.0-SNAPSHOT</com.wso2telco.ids.urlshorten.version>
-        <com.wso2telco.ids.authentic.selector.version>1.0.0-SNAPSHOT</com.wso2telco.ids.authentic.selector.version>
+        <authentic.selector.version>1.0.0-SNAPSHOT</authentic.selector.version>
         <com.gsma.authenticators.version>1.0.0-SNAPSHOT</com.gsma.authenticators.version>
         <url.shorten.version>1.0.0-SNAPSHOT</url.shorten.version> 
         <maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>            
