moved url-shorten and user claim retrieval to component level

--- a/components/url-shorten/pom.xml
+++ b/components/url-shorten/pom.xml
@@ -11,16 +11,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>lib</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>url-shorten</artifactId>
 	<packaging>bundle</packaging>
 	<url>http://maven.apache.org</url>
 
-	<name>Url Shorten - Lib</name>
+	<name>Url Shorten - Components</name>
 
 	<properties>
 		<json.simple.version>1.1</json.simple.version>
