--- a/components/lib/pom.xml
+++ b/components/lib/pom.xml
@@ -25,8 +25,8 @@
 	<name>WSO2Telco supportive libraries</name>
 
 	<modules>
-		<module>url-shorten</module>
-		<module>user-claim-retriever</module>
+		<!--module>url-shorten</module>
+		<module>user-claim-retriever</module-->
 	</modules>
 
 	<properties>
