--- a/components/user-claim-retriever/pom.xml
+++ b/components/user-claim-retriever/pom.xml
@@ -18,15 +18,15 @@
 
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
-		<artifactId>lib</artifactId>
+		<artifactId>component-ids</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>user-claim-retriever</artifactId>
-	<name>User Claim Retriever - Lib</name>
+	<name>User Claim Retriever - Components</name>
 	<packaging>bundle</packaging>
 
 	<dependencies>
