--- a/features/pom.xml
+++ b/features/pom.xml
@@ -9,13 +9,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>component-ids-feature</artifactId>
     <packaging>pom</packaging>
-    <name>WSO2Telco  -Identity Server Features</name>
+    <name>Component Ids Aggregated Features</name>
     <url>http://wso2.org</url>
     <modules>
         <module>com.wso2telco.ids.urlshorten.feature</module>
         <module>com.wso2telco.ids.gsmaauthenticator.feature</module>
 	<module>com.wso2telco.ids.userclaimretriever.feature</module>
-    <module>com.wso2telco.ids.authenticateselector.feature</module>
+    	<module>com.wso2telco.ids.authenticateselector.feature</module>
     </modules>
     <properties>
 	<org.wso2telco.ids.version>1.0.0-SNAPSHOT</org.wso2telco.ids.version>
