--- a/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
+++ b/features/com.wso2telco.ids.openidtokenbuilder.feature/pom.xml
@@ -10,11 +10,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.wso2telco.ids.urlshorten.feature</artifactId>
+    <artifactId>com.wso2telco.ids:openidtokenbuilder.feature</artifactId>
     <packaging>pom</packaging>
-    <name>WSO2Telco Carbon - Identity Server Feature</name>
+    <name>Openid Token Builder Feature</name>
     <url>http://wso2.org</url>
-    <description>This feature contains the server bundles required for Back-end Student Management functionality</description>
+    <description>This feature contains the server bundles required for openid toknen builder</description>
 
     <!--dependencies>
         <dependency>
