--- a/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
+++ b/features/com.wso2telco.ids.userclaimretriever.feature/pom.xml
@@ -12,9 +12,9 @@
 
     <artifactId>com.wso2telco.ids.userclaimretriever.feature</artifactId>
     <packaging>pom</packaging>
-    <name>WSO2Telco Carbon - Identity Server Feature</name>
+    <name>User Claim Retriever Feature</name>
     <url>http://wso2.org</url>
-    <description>This feature contains the server bundles required for Back-end Student Management functionality</description>
+    <description>This feature contains the server bundles required for User Claim Retriever Feature</description>
 
     <!--dependencies>
         <dependency>
