--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<artifactId>component-ids</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
-	<name>WSO2Telco Core - Aggregate Pom</name>
+	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
 
